refresh token and access token functions are created

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
 PORT =8000
 MONGODB_URL="URL link"
+ACCESS_TOKEN_SECRET= dsffdsfgsfdggsfdgs
+ACCESS_TOKEN_EXPIRY= 1d
+REFRESH_TOKEN_SECRET = sdafjdafslkfjka;nskdfkj;a;fs
+REFRESH_TOKEN_EXPIRY = 10d
