cloudinary settings and utils has been created

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,9 @@ ACCESS_TOKEN_SECRET= dsffdsfgsfdggsfdgs
 ACCESS_TOKEN_EXPIRY= 1d
 REFRESH_TOKEN_SECRET = sdafjdafslkfjka;nskdfkj;a;fs
 REFRESH_TOKEN_EXPIRY = 10d
+
+
+//cloudinary settings
+CLOUD_NAME=cloud name
+CLOUD_API_KEY=cloudapikey
+CLOUD_API_SECRET=secret-key
